--- a/src/scss/layout/_modal.scss
+++ b/src/scss/layout/_modal.scss
@@ -30,12 +30,9 @@ re-modal-container {
 
         &.modal-fixed {
             position: fixed !important;
-            //    top: 10vh !important;
-            //    left: 50% !important;
-            //    transform: translateX(-50%);
         }
 
-        &.modal-reserve-height {
+        &.modal-reserve-height div.ui-dialog-content {
             height: 75vh !important;
         }
 
@@ -115,29 +112,7 @@ re-modal-container {
                 margin-top: -1em;
             }
 
-            &::-webkit-scrollbar {
-                width: 14px;
-                height: 18px;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                height: 6px;
-                border: 4px solid rgba(0, 0, 0, 0);
-                background-clip: padding-box;
-                border-radius: 7px;
-                background-color: rgba(0, 0, 0, 0.35);
-                box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
-            }
-
-            &::-webkit-scrollbar-button {
-                width: 0;
-                height: 0;
-                display: none;
-            }
-
-            &::-webkit-scrollbar-corner {
-                background-color: transparent;
-            }
+            @include scrollbars;
         }
     }
 
